# iteration_of_tought

./: .cursorrules  .gitignore  README.md  pyproject.toml
iot_agent/: main.py
