[tool.poetry]
name = "iot-agent"
version = "0.1.0"
description = "Iteration of Thought LLM Agent"
authors = ["Raphael MANSUY <raphael.mansuy@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["llm", "agent", "openai", "litellm"]
repository = "https://github.com/raphaelmansuy/iteration_of_tought"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.46.1"
loguru = "^0.7.2"
rich = "^13.8.1"
litellm = "^1.46.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
iot-agent = "iot_agent.main:main"
